# swift-ir

./: ..proj  .gitattributes  .gitignore  .json  CLAUDE.md  Dockerfile  LICENSE.txt  PREV_README.md  Pipfile  README.md  README_2.txt  README_LS6  README_LS6.txt  README_TACC.txt  __init__.py  _environment.yml  alignEM.py  alignem_env.yml  bootstrap_alignEM  cafm_inverted.csv  defaults.json  deprecated.txt  env.yml  environment.yml  joel_notes.txt  led.py  ls6.yml  myfile.csv  ng_bootstrap.py  out.json  profile.html  profile.json  pyproject.toml  pyproject.toml.linux  pyproject.toml.mac  qef.proj  requirements.txt  requirements_test.txt  results.prof  run_alignEM  (+29 more)
alignEM/: LoggingTqdm.py  Pipfile  README.txt  __init__.py  alignEM.py  apply_affines.py  compute_affines.py  config.py  correlation_spot_image  data_model.py  em_utils.py  environment.yml  generate_scales.py  generate_zarr.py  generate_zarr_contig.py  image_utils.py  job_apply_affine.py  job_convert_zarr.py  joel_notes.txt  main.py  mp_queue.py  requirements.txt  run_json_project.py  save_bias_analysis.py  swiftir.py  view_3dem.py
alignEM/lib/: debug.h  makefile  makefile.darwin  mir.c  mir_second.sh  swim.c
alignEM/package/: __init__.py  apply_affines.py  compute_affines.py  config.py  convert_zarr.py  data_model.py  em_utils.py  generate_aligned.py  generate_aligned_images.py  generate_scales.py  generate_zarr.py  generate_zarr_contig.py  image_funcs.py  image_utils.py  img_103_1024.tif  job_apply_affine.py  job_convert_zarr.py  job_convert_zarr_contig.py  job_single_alignment.py  job_single_scale.py  mp_queue.py  pyswift_tui.py  run_json_project.py  save_bias_analysis.py  scale_pyramid.py  swiftir.py  tiffs2zarr.py  view_3dem.py  view_ng.py
alignEM/test_data/: img_101_1024.tif
alignEM/ui/: collapsible_box.py  defaults_form.py  head_up_display.py  image_library.py  json_treeview.py  jupyter_console.py  main_window.py  multi_image_panel.py  python_console.py  snr_plot.py  toggle_switch.py  zoom_pan_widget.py
alignEM/utils/: create_ngff_metadata.py  tiffs2zarr.py
debug/: __init__.py
debug/mod_a/: __init__.py
debug/mod_b/: mod_b0.py
docs/: README.md  TODO.txt  metrics.txt
docs/commands/: README.md  mir.1.txt
docs/development/: README.md
docs/examples/: README.md
docs/man-src/: Makefile  iavg.1.html  iavg.1.txt  iscale.1.txt  mir.1.txt  remod.1.html  swim.1.html  swim.1.txt
docs/tacc/: README.md
docs/user/: README.md
img_aligned.zarr/s4/: .zarray
python/: align_swiftir.py  app_window.py  emtest.py  mir_align.py  mir_waves.py  pyswift_gui.py  pyswift_run_external.py  pyswift_run_json.py  pyswift_run_threads.py  pyswift_tui.py  run_json_project.py  swiftir.py  tif_stack_view.py
resources/: example.json
scale_1/img_src/: R34CA1-BS12.101.tif  R34CA1-BS12.104.tif  R34CA1-BS12.107.tif  R34CA1-BS12.111.tif  R34CA1-BS12.113.tif  R34CA1-BS12.114.tif  R34CA1-BS12.115.tif  R34CA1-BS12.116.tif  R34CA1-BS12.118.tif  R34CA1-BS12.119.tif  R34CA1-BS12.120.tif  R34CA1-BS12.121.tif  R34CA1-BS12.123.tif  R34CA1-BS12.124.tif  R34CA1-BS12.126.tif  R34CA1-BS12.127.tif  R34CA1-BS12.128.tif  R34CA1-BS12.131.tif  R34CA1-BS12.133.tif  R34CA1-BS12.134.tif  R34CA1-BS12.135.tif  R34CA1-BS12.136.tif  R34CA1-BS12.137.tif  R34CA1-BS12.138.tif  R34CA1-BS12.139.tif  R34CA1-BS12.141.tif  R34CA1-BS12.142.tif  R34CA1-BS12.143.tif  R34CA1-BS12.144.tif  R34CA1-BS12.145.tif  R34CA1-BS12.146.tif  R34CA1-BS12.147.tif  R34CA1-BS12.148.tif  R34CA1-BS12.149.tif  R34CA1-BS12.150.tif  R34CA1-BS12.151.tif  R34CA1-BS12.152.tif  R34CA1-BS12.153.tif  R34CA1-BS12.154.tif  R34CA1-BS12.155.tif  (+139 more)
source/: ImageAlign.java  Reconstruct.py  ZoomPanLib.java  app_window.py  debug.h  first_swim.sh  iavg.c  iscale.c  json_parser.java  makefile  makefile_debug  mini_mir.c  mir.c  mirb.c  pyswift_gui.py  remod.c  remod_old.c  revision.java  run_swift.java  run_swift_master.java  sha1sum.txt  swift_gui.MF  swift_gui.java  swim.c  swim_lab.java  swimio.h  test_libs.c  transform_test.java
source/GTK2/: align_swiftir.py  (+3 more)
src/: TqdmToLogger.py  __init__.py  _viewer_ma.py  align.py  apply_affines.py  autoscale.py  background_worker.py  benchmarker.py  compute_affines.py  config.py  data_model.py  data_structs.py  em_utils.py  funcs_image.py  funcs_ng.py  funcs_zarr.py  generate_aligned.py  generate_multiscale_zarr.py  generate_remod.py  generate_scales.py  generate_scales_zarr.py  generate_thumbnails.py  generate_thumbnails_aligned.py  generate_thumbnails_spot.py  generate_zarr.py  generate_zarr_flat.py  generate_zarr_multi.py  generate_zarr_scales.py  hash_table.py  helpers.py  http_ng_server.py  image_funcs.py  image_library.py  image_utils.py  job_apply_affine.py  job_collate_spots.py  job_convert_zarr.py  job_convert_zarr_scales.py  job_mir_apply_affine.py  job_python_apply_affine.py  (+29 more)
test101/: temp_project_file.json
tests/: README.md  alignment_test.json  alignment_test_pw.json  alignment_test_pw_skip.json  context.py  example.proj  makefile  mir_first_stderr.txt  mir_second_stderr.txt  mir_second_stdout.txt  mir_third_stderr.txt  mir_third_stdout.txt  run_swim_mir.sh  run_tests.py  swim_first_stderr.txt  swim_first_stdout.txt  swim_fourth.sh  swim_fourth_stderr.txt  swim_fourth_stdout.txt  swim_second_stderr.txt  swim_second_stdout.txt  swim_third.sh  swim_third_stderr.txt
(+24679 files in other folders)
