[metadata]
name = alignEM
version = 0.0.1
description = AlignEM-SWIFT is a graphical tool for aligning serial section electron micrographs using SWiFT-IR.
long_description = file: README.md, LICENSE.txt
author = Joel Yancey
author_email = joelgyancey@ucla.edu
url = https://github.com/mcellteam/swift-ir/tree/development_ng
keywords = Image Registration, Electron Microscopy
license = Mozilla Public License Version 2.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python_version>="3.9"
    numpy
    psutil
    opencv-python-headless
    pillow
    zarr
    tifffile
    imagecodecs
    neuroglancer
    qtconsole
    PySide6
    pyqtwebengine
    qtpy
    qtawesome
    pyqtgraph
    tqdm

[options.entry_points]
console_scripts =
    alignem = alignEM:main

