[metadata]
name = alignEM
version = 0.5.49
description = alignEM is a graphical tool for registering serial section electron micrographs using SWiFT-IR.
long_description = file: README.md, LICENSE.txt
author = Joel Yancey
author_email = joelgyancey@ucla.edu
url = https://github.com/mcellteam/swift-ir/tree/development_ng
keywords = Image Registration, Electron Microscopy
license = Mozilla Public License Version 2.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python_version>=3.9
    numpy
    psutil
    zarr
    tifffile
    imageio
    imagecodecs
    neuroglancer
    tensorstore
    qtconsole
    PyQt5
    pyqtwebengine
    qtpy
    qtawesome
    pyqtgraph
    pylibtiff

[options.entry_points]
console_scripts =
    alignem = alignem:main

